--- a/pages/services.html
+++ b/pages/services.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nomonjon | Services</title>
-    <link rel="stylesheet" href="../css/services.css" />
+    <link rel="stylesheet" href="../css/services.min.css" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
-    <header></header>
+    <header class="container"></header>
   </body>
 </html>
