--- a/pages/services.html
+++ b/pages/services.html
@@ -4,10 +4,238 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nomonjon | Services</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/services.min.css" />
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <!-- <link href="/dist/output.css" rel="stylesheet" /> -->
   </head>
   <body>
-    <header class="container"></header>
+    <nav
+      class="navbar navbar-expand-lg fixed-top"
+      style="background-color: whitesmoke"
+    >
+      <div class="container">
+        <img src="../assets/images/Nomonjon's images/Logo.png" alt="" />
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-navbar offcanvas-start"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              <img src="../assets/images/Nomonjon's images/Logo.png" alt="" />
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./careers.html">CAREERS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#w">Contact us</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <button class="btn btn-outline-success btn-3" type="submit">
+                <a class="nav-link" href="./pages/contact.html"
+                  >Clone project</a
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <section class="container">
+        <div class="home__cards">
+          <div class="home__card">
+            <h1>We serve clients with ground breaking solutions</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+              leo odio, sagittis quis ornare quis.
+            </p>
+            <button>Work With Us</button>
+          </div>
+          <div class="home__card">
+            <img
+              style="margin-right: -130px"
+              src="../assets/images/Nomonjon's images/header.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+    <section class="container">
+      <div class="home__cards">
+        <div class="home_card">
+          <img
+            style="margin-left: -49px"
+            src="../assets/images/Nomonjon's images/Feature 1 Image.png"
+            alt=""
+          />
+        </div>
+        <div class="home_card">
+          <h1>Business strategy</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo
+            odio, sagittis quis ornare quis.met, consectetur adipiscing elit.
+            Aliquam leo odio, sagittis quis ornare quis.
+          </p>
+          <ul>
+            <li>Cost strategy</li>
+            <li>Differentiated product or service strategy</li>
+            <li>Focus on a niche strategy</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="home__cards">
+        <div class="home-card">
+          <h1>Digitalization</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo
+            odio, sagittis quis ornare quis.met, consectetur adipiscing elit.
+            Aliquam leo odio, sagittis quis ornare quis. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Aliquam leo odio, sagittis.
+          </p>
+        </div>
+        <div class="home-card">
+          <img
+            style="margin-right: -140px"
+            src="../assets/images/Nomonjon's images/Feature 2 image.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="home__cards">
+        <div class="home_card">
+          <img
+            style="margin-left: -50px"
+            src="../assets/images/Nomonjon's images/Feature 3 Image.png"
+            alt=""
+          />
+        </div>
+        <div class="home_card">
+          <h1>Risk assessment</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo
+            odio, sagittis quis ornare quis.met, consectetur adipiscing elit.
+            Aliquam leo odio, sagittis quis ornare quis.
+          </p>
+          <ul>
+            <li>Individual risk assessment</li>
+            <li>Systems risk assessment</li>
+            <li>Mathematical conceptualization</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="home__cards">
+        <div class="home-card">
+          <h1>Artificial intelligence</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo
+            odio, sagittis quis ornare quis.met, consectetur adipiscing elit.
+            Aliquam leo odio, sagittis quis ornare quis. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Aliquam leo odio, sagittis.
+          </p>
+        </div>
+        <div class="home-card">
+          <img
+            style="margin-right: -140px"
+            src="../assets/images/Nomonjon's images/Featue 4 Image.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="home__cards">
+        <div class="home_card">
+          <img
+            style="margin-left: -45px"
+            src="../assets/images/Nomonjon's images/Feature 5 Image.png"
+            alt=""
+          />
+        </div>
+        <div class="home_card">
+          <h1>Smart Contracts</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo
+            odio, sagittis quis ornare quis.met, consectetur adipiscing elit.
+            Aliquam leo odio, sagittis quis ornare quis.
+          </p>
+          <ul>
+            <li>Cost strategy</li>
+            <li>Differentiated product or service strategy</li>
+            <li>Focus on a niche strategy</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="home__cards">
+        <div class="home___card">
+          <h1>Finsweet was a dream to work with</h1>
+          <p>
+            Maecenas efficitur scelerisque lorem, et varius lacus tincidunt vel.
+            Pellentesque a arcu vitae diam dapibus mattis vel vel orci. Vivamus
+            eleifend nec felis vel auctor.
+          </p>
+          <img src="../assets/images/Nomonjon's images/Person.png" alt="" />
+        </div>
+        <div class="home-card">
+          <img
+            style="margin-right: -135px"
+            src="../assets/images/Nomonjon's images/Image.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
