--- a/index.html
+++ b/index.html
@@ -235,20 +235,173 @@
         <h1>Finsweet was a dream to work with</h1>
         <p>Maecenas efficitur scelerisque lorem, et varius lacus tincidunt vel. Pellentesque a arcu vitae diam dapibus
           mattis vel vel orci. Vivamus eleifend nec felis vel auctor.</p>
-          <div class="user">
-            <img src="./assets/images/Ja'farxon_imaags/orangimg/v-1.png" alt="">
-            <div>
-              <h4>Chikelu Neo</h4>
-              <p>CEO at MazeAI</p>
-            </div>
-          </div>
+        <div class="user">
+          <img src="./assets/images/Ja'farxon_imaags/orangimg/Person.png" alt="">
+        </div>
       </div>
       <div class="video-right">
-
+        <div class="play">
+          <div class="plays">
+            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="15" viewBox="0 0 13 15" fill="none">
+              <path d="M13 7.5L0.249999 14.8612L0.25 0.138783L13 7.5Z" fill="#F58A07" />
+            </svg>
+          </div>
+          <p>play Video</p>
+        </div>
       </div>
     </div>
   </section>
   <!-- Video Section -->
+
+  <!-- Latest Section -->
+
+  <section class="latest-section">
+    <div class="container">
+      <h1 class="latest-title">Latest Blog & News</h1>
+      <div class="latest-section-cards">
+        <div class="section-card">
+          <div class="s-card-img">
+            <img src="./assets/images/Ja'farxon_imaags/news/new1.png" alt="">
+          </div>
+          <div class="s-card-blog">
+            <div>
+              <h4>Why you have to digitalize in 2021</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit
+                elit
+                et.</p>
+              <p style="color: #F58A07;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
+                    viewBox="0 0 22 10" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
+                      fill="#F58A07" />
+                  </svg></span></p>
+            </div>
+          </div>
+        </div>
+        <div class="section-card">
+          <div class="s-card-img">
+            <img src="./assets/images/Ja'farxon_imaags/news/new2.png" alt="">
+          </div>
+          <div class="s-card-blog">
+            <div>
+              <h4>Why you have to digitalize in 2021</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit
+                elit
+                et.</p>
+              <p style="color: #F58A07;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
+                    viewBox="0 0 22 10" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
+                      fill="#F58A07" />
+                  </svg></span></p>
+            </div>
+          </div>
+        </div>
+        <div class="section-card">
+          <div class="s-card-img">
+            <img src="./assets/images/Ja'farxon_imaags/news/new3.png" alt="">
+          </div>
+          <div class="s-card-blog">
+            <div>
+              <h4>Why you have to digitalize in 2021</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit
+                elit
+                et.</p>
+              <p style="color: #F58A07;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
+                    viewBox="0 0 22 10" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
+                      fill="#F58A07" />
+                  </svg></span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Latest Section -->
+
+  <!-- Footer  -->
+  <footer class="footer">
+<img class="footer-left" src="./assets/images/Ja'farxon_imaags/news/Shape Left.png" alt="">
+    <div class="container">
+      <div class="footer-item">
+        <div class="f-item1">
+          <img src="./assets/images/Ja'farxon_imaags/orangimg/Logo.png" alt="">
+          <h1>
+            Bespoke software solutions
+          </h1>
+          <div class="tarmoqlar">
+            <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" viewBox="0 0 22 20" fill="none">
+                <path
+                  d="M16.0068 1.66675H13.339C12.1597 1.66675 11.0287 2.10573 10.1948 2.88714C9.36096 3.66854 8.89249 4.72835 8.89249 5.83342V8.33342H6.22461V11.6667H8.89249V18.3334H12.4497V11.6667H15.1176L16.0068 8.33342H12.4497V5.83342C12.4497 5.6124 12.5434 5.40044 12.7101 5.24416C12.8769 5.08788 13.1031 5.00008 13.339 5.00008H16.0068V1.66675Z"
+                  fill="white" />
+              </svg></span>
+            <span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" viewBox="0 0 22 20" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M19.6396 4.29942C19.9425 4.59206 20.1577 4.95443 20.2633 5.34992C20.5454 6.8155 20.6824 8.30238 20.6724 9.79158C20.678 11.2585 20.5411 12.7229 20.2633 14.1666C20.1577 14.5621 19.9425 14.9244 19.6396 15.2171C19.3367 15.5097 18.9567 15.7223 18.5381 15.8333C17.0085 16.2166 10.8902 16.2166 10.8902 16.2166C10.8902 16.2166 4.77182 16.2166 3.24224 15.8333C2.83211 15.7281 2.45786 15.5256 2.15565 15.2453C1.85343 14.965 1.63347 14.6165 1.51701 14.2333C1.23489 12.7677 1.09795 11.2808 1.10793 9.79158C1.10014 8.31351 1.23707 6.83788 1.51701 5.38325C1.62264 4.98776 1.83779 4.6254 2.14071 4.33276C2.44363 4.04012 2.8236 3.82757 3.24224 3.71659C4.77182 3.33325 10.8902 3.33325 10.8902 3.33325C10.8902 3.33325 17.0085 3.33325 18.5381 3.68325C18.9567 3.79424 19.3367 4.00679 19.6396 4.29942ZM14.0031 9.79161L8.88962 12.5166V7.06661L14.0031 9.79161Z"
+                  fill="white" />
+              </svg>
+            </span>
+            <span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" viewBox="0 0 22 20" fill="none">
+                <g clip-path="url(#clip0_1_1019)">
+                  <path
+                    d="M15.5562 1.66675H6.66327C4.20755 1.66675 2.2168 3.53223 2.2168 5.83342V14.1667C2.2168 16.4679 4.20755 18.3334 6.66327 18.3334H15.5562C18.0119 18.3334 20.0027 16.4679 20.0027 14.1667V5.83342C20.0027 3.53223 18.0119 1.66675 15.5562 1.66675Z"
+                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path
+                    d="M14.6667 9.47501C14.7765 10.1685 14.65 10.8769 14.3054 11.4992C13.9608 12.1215 13.4156 12.6262 12.7473 12.9414C12.079 13.2566 11.3216 13.3663 10.5829 13.2549C9.84417 13.1436 9.16176 12.8167 8.6327 12.321C8.10364 11.8252 7.75487 11.1857 7.636 10.4935C7.51713 9.8013 7.63422 9.09158 7.97061 8.46532C8.30699 7.83905 8.84555 7.32812 9.50967 7.00521C10.1738 6.68229 10.9297 6.56383 11.6698 6.66667C12.4247 6.77158 13.1236 7.10123 13.6633 7.60693C14.203 8.11263 14.5548 8.76757 14.6667 9.47501Z"
+                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M16.001 5.41675H16.0106" stroke="white" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_1_1019">
+                    <rect width="21.3431" height="20" fill="white" transform="translate(0.438477)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </span>
+            <span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" viewBox="0 0 22 20" fill="none">
+                <path
+                  d="M21.1114 2.50008C20.2598 3.06298 19.3169 3.4935 18.319 3.77508C17.7834 3.198 17.0716 2.78899 16.2798 2.60335C15.4881 2.41771 14.6546 2.46441 13.8921 2.73712C13.1296 3.00984 12.4749 3.49541 12.0165 4.12818C11.5581 4.76094 11.3182 5.51036 11.3291 6.27508V7.10841C9.7663 7.14639 8.21772 6.82159 6.82129 6.16295C5.42486 5.50431 4.22393 4.53228 3.32546 3.33341C3.32546 3.33341 -0.231714 10.8334 7.77194 14.1667C5.94046 15.3317 3.75869 15.9159 1.54688 15.8334C9.55052 20.0001 19.3328 15.8334 19.3328 6.25008C19.3319 6.01796 19.3081 5.78641 19.2616 5.55841C20.1692 4.71966 20.8097 3.66067 21.1114 2.50008Z"
+                  fill="white" />
+              </svg>
+            </span>
+          </div>
+        </div>
+        <div class="f-item2">
+          <p>Company</p>
+          <p>About Us</p>
+          <p>Careers</p>
+          <p>Services</p>
+          <p>Blog</p>
+        </div>
+        <div class="f-item3">
+          <p>Connect</p>
+          <p>hi@finsweet.com</p>
+          <p>+(123) 456-7890</p>
+        </div>
+        <div class="f-item4">
+          <p> Join Newsletter</p>
+          <form>
+            <input type="text" placeholder="Type email here">
+            <button>Subscribe</button>
+          </form>
+        </div>
+
+      </div>
+      <div class="foter-b">
+        <p>© All rights reserved – Finsweet</p>
+        <p> Privacy Policy <span>Terms & Conditions</span></p>
+      </div>
+    </div>
+    <img class="footer-right" src="./assets/images/Ja'farxon_imaags/news/Shape Right.png" alt="">
+  </footer>
+  <!-- Footer  -->
 
 
 
