--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="./pages/about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./careers.html">CAREERS</a>
+              <a class="nav-link" href="./pages/careers.html">CAREERS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/services.html">Services</a>
@@ -269,7 +269,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit
                 elit
                 et.</p>
-              <p style="color: #F58A07;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
+              <p style="color: #F58A07 ;cursor: pointer;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
                     viewBox="0 0 22 10" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
@@ -288,7 +288,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit
                 elit
                 et.</p>
-              <p style="color: #F58A07;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
+              <p style="color: #F58A07 ;cursor: pointer;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
                     viewBox="0 0 22 10" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
@@ -307,7 +307,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit
                 elit
                 et.</p>
-              <p style="color: #F58A07;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
+              <p style="color: #F58A07 ;cursor: pointer;">Learn More <span><svg xmlns="http://www.w3.org/2000/svg" width="22" height="10"
                     viewBox="0 0 22 10" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
