--- a/pages/careers.html
+++ b/pages/careers.html
@@ -14,6 +14,236 @@
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg fixed-top"
+      style="background-color: whitesmoke"
+    >
+      <div class="container">
+        <img src="../assets/images/Nomonjon's images/Logo.png" alt="" />
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-navbar offcanvas-start"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              <img src="../assets/images/Nomonjon's images/Logo.png" alt="" />
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./careers.html">CAREERS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#w">Contact us</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <button class="btn btn-outline-success btn-3" type="submit">
+                <a class="nav-link" href="./pages/contact.html"
+                  >Clone project</a
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <section class="container">
+      <div class="home__cards">
+        <div class="homecard">
+          <h1>We hired people who are very passionate about what they do</h1>
+          <p>
+            Through True Rich Attended does no end it his mother since real had
+            half every him case in packages enquire we up ecstatic unsatiable
+            saw.
+          </p>
+          <button>View Positions</button>
+        </div>
+        <div class="homecard">
+          <img
+            style="margin-right: -50px"
+            src="../assets/images/Nomonjon's images/carers.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <h1 class="see">See our open positions</h1>
+      <div class="rek__cards">
+        <div class="rek__card">
+          <h3>Full Stack Developer</h3>
+          <p>Bengaluru · Full Time</p>
+          <a href="#">Apply Now</a>
+        </div>
+        <div class="rek__card">
+          <h3>Testing Engineer</h3>
+          <p>Bengaluru · Full Time</p>
+          <a href="#">Apply Now</a>
+        </div>
+        <div class="rek__card">
+          <h3>Hr Manager+</h3>
+          <p>Mumbai · Full Time</p>
+          <a href="#">Apply Now</a>
+        </div>
+        <div class="rek__card">
+          <h3>Full Stack Developer</h3>
+          <p>Bengaluru · Full Time</p>
+          <a href="#">Apply Now</a>
+        </div>
+        <div class="rek__card">
+          <h3>Testing Engineer</h3>
+          <p>Bengaluru · Full Time</p>
+          <a href="#">Apply Now</a>
+        </div>
+      </div>
+    </section>
+    <section class="latest-section">
+      <div class="container">
+        <h1 class="latest-title">Latest Blog & News</h1>
+        <div class="latest-section-cards">
+          <div class="section-card">
+            <div class="s-card-img">
+              <img
+                src="../assets/images/Ja'farxon_imaags/news/new1.png"
+                alt=""
+              />
+            </div>
+            <div class="s-card-blog">
+              <div>
+                <h4>Why you have to digitalize in 2021</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur sit amet eros blandit, hendrerit elit et.
+                </p>
+                <p style="color: #f58a07">
+                  Learn More
+                  <span
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="22"
+                      height="10"
+                      viewBox="0 0 22 10"
+                      fill="none"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
+                        fill="#F58A07"
+                      />
+                    </svg>
+                  </span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="section-card">
+            <div class="s-card-img">
+              <img
+                src="../assets/images/Ja'farxon_imaags/news/new2.png"
+                alt=""
+              />
+            </div>
+            <div class="s-card-blog">
+              <div>
+                <h4>Why you have to digitalize in 2021</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur sit amet eros blandit, hendrerit elit et.
+                </p>
+                <p style="color: #f58a07">
+                  Learn More
+                  <span
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="22"
+                      height="10"
+                      viewBox="0 0 22 10"
+                      fill="none"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
+                        fill="#F58A07"
+                      />
+                    </svg>
+                  </span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="section-card">
+            <div class="s-card-img">
+              <img
+                src="../assets/images/Ja'farxon_imaags/news/new3.png"
+                alt=""
+              />
+            </div>
+            <div class="s-card-blog">
+              <div>
+                <h4>Why you have to digitalize in 2021</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur sit amet eros blandit, hendrerit elit et.
+                </p>
+                <p style="color: #f58a07">
+                  Learn More
+                  <span
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="22"
+                      height="10"
+                      viewBox="0 0 22 10"
+                      fill="none"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M17.6338 0.198869L21.8079 4.51989C22.064 4.78505 22.064 5.21495 21.8079 5.48011L17.6338 9.80113C17.3776 10.0663 16.9623 10.0663 16.7062 9.80113C16.45 9.53597 16.45 9.10606 16.7062 8.8409L19.7606 5.67898L0 5.67898L0 4.32102L19.7606 4.32102L16.7062 1.1591C16.45 0.893936 16.45 0.464029 16.7062 0.198869C16.9623 -0.0662898 17.3776 -0.0662898 17.6338 0.198869Z"
+                        fill="#F58A07"
+                      />
+                    </svg>
+                  </span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <img
         class="footer-left"
