--- a/pages/careers.html
+++ b/pages/careers.html
@@ -53,24 +53,24 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="./about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./careers.html">CAREERS</a>
+                <a class="nav-link" href="#">CAREERS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="./services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="./blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#w">Contact us</a>
+                <a class="nav-link" href="./blog-inner.html">Contact us</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
               <button class="btn btn-outline-success btn-3" type="submit">
-                <a class="nav-link" href="./pages/contact.html"
+                <a class="nav-link" href="#"
                   >Clone project</a
                 >
               </button>
