--- a/pages/services.html
+++ b/pages/services.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="./about.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./careers.html">CAREERS</a>
@@ -62,10 +62,10 @@
                 <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="./blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#w">Contact us</a>
+                <a class="nav-link" href="./blog-inner.html">Contact us</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
