--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../css/about.css" />
     <link rel="stylesheet" href="../css/services.min.css" />
     <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/about-medi.css" />
+    <link rel="stylesheet" href="../css/hom-medi.css" />
+    <link rel="stylesheet" href="../css/scrol.css" />
   </head>
   <body>
     <!-- Nav -->
@@ -99,8 +102,14 @@
         </div>
         <div class="about-right">
           <img
+            class="bacground-about"
+            src="../assets/images/Ja'farxon_imaags/about/about.png"
+            alt=""
+          />
+          <img
             src=".././assets/images/Ja'farxon_imaags/about/about1.png"
             alt=""
+            class="left-about-bg"
           />
           <img
             class="about-c"
@@ -165,7 +174,7 @@
     <!-- Features Section -->
 
     <!-- About Section -->
-    <section class="about-section">
+    <section class="about-sectionn">
       <div class="container">
         <div class="about-section-left">
           <div>
@@ -181,6 +190,12 @@
           </div>
         </div>
         <div class="about-section-right">
+          <!-- <div class="about-section-rig">
+            <img
+              src="../assets/images/Ja'farxon_imaags/about/about-s-b.png"
+              alt=""
+            />
+          </div> -->
           <img
             src="../assets/images/Ja'farxon_imaags/about/about-section.png"
             alt=""
@@ -270,6 +285,11 @@
           </div>
         </div>
         <div class="video-right">
+          <img
+            class="video-bg"
+            src="../assets/images/Ja'farxon_imaags/orangimg/v-2.png"
+            alt=""
+          />
           <div class="play">
             <div class="plays">
               <svg
